Fixed spacing issue between firstname and lastname input fields on the user signup view. Added 1 rem of margin-bottom to evenly space out the two fields as they were touching each other once the screen hit 768px and below. Now all of the input fields on the user signup view are evenlyspaced out and not touching each other.

--- a/src/main/resources/static/css/commonStyles.css
+++ b/src/main/resources/static/css/commonStyles.css
@@ -487,8 +487,7 @@ i{
     }
 }
 
-@media only screen and (min-width: 250px) and (max-width: 768px) {
-    /* CSS rules to be applied when the screen width is between 768px and 1024px */
+@media only screen and (min-width: 100px) and (max-width: 768px) {
     .form-select{
         padding: 0;
     }
@@ -502,6 +501,9 @@ i{
         perspective: 1000px;
         font-family: sans-serif;
         margin-top: 3em;
+    }
+    .user-signup-fname{
+        margin-bottom: 1rem;
     }
 }
 
